Added view and activity to display all the test sets

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+		<activity android:name=".ViewTestSets"
+                  android:label="@string/view_test_sets">
+            <intent-filter>
+                <action android:name="android.intent.action.EDIT" />
+                <category android:name="android.intent.category.ALTERNATIVE" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
